# IR2117

./: .gitignore  tb3.rviz
HelloWorld/: hello.cc
NewProblem/: estadistics.cc
Quadratic/: quadratic.cc
Sum/: sum.cc  sum_ab  sum_ab.cc
ros2_ws/src/cpp_srvcli/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
ros2_ws/src/examples/: CMakeLists.txt  package.xml
ros2_ws/src/examples/src/: publisher.cpp  subscriber.cpp
ros2_ws/src/learning_tf2_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/learning_tf2_cpp/launch/: turtle_tf2_demo.launch.py
ros2_ws/src/learning_tf2_cpp/src/: turtle_tf2_broadcaster.cpp  turtle_tf2_listener.cpp
ros2_ws/src/median/: CMakeLists.txt  package.xml
ros2_ws/src/median/src/: median.cpp
ros2_ws/src/minmax/: CMakeLists.txt  package.xml
ros2_ws/src/minmax/src/: max.cpp  min.cpp  minmax.cpp
ros2_ws/src/olympic/: CMakeLists.txt  package.xml
ros2_ws/src/olympic/src/: rings.cpp
ros2_ws/src/stats/: CMakeLists.txt  package.xml
ros2_ws/src/stats/src/: mean.cpp  median.cpp  mode.cpp
ros2_ws/src/sum/: CMakeLists.txt  package.xml
ros2_ws/src/sum/src/: sum.cpp
tb3_ws/src/intrusion/: CMakeLists.txt  package.xml
tb3_ws/src/intrusion/launch/: monitor.launch.py
tb3_ws/src/intrusion/src/: monitor.cpp
tb3_ws/src/obstacles/: CMakeLists.txt  package.xml
tb3_ws/src/obstacles/launch/: detector_test.launch.py  triple_detector.launch.py
tb3_ws/src/obstacles/src/: avoidance.cpp  detector.cpp
tb3_ws/src/olympic/: CMakeLists.txt  package.xml
tb3_ws/src/olympic/src/: rings.cpp
tb3_ws/src/persons/: CMakeLists.txt  package.xml
tb3_ws/src/persons/launch/: person_follower.launch.py
tb3_ws/src/persons/src/: detector.cpp  follower.cpp
tb3_ws/src/robot_trajectory/: CMakeLists.txt  package.xml
tb3_ws/src/robot_trajectory/launch/: hexagon.launch.py  spiral.launch.py  square.launch.py
urdf/: 01-myfirst.urdf.xacro  02-multipleshapes.urdf  03-origins.urdf  04-materials.urdf  06-flexible.urdf  07-physics.urdf
(+5 files in other folders)
